// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoSection empty resume produces no text content 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      />
    </section>
  </div>
</body>
`;

exports[`InfoSection everything else 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M17.834 6.166a8.25 8.25 0 1 0 0 11.668.75.75 0 0 1 1.06 1.06c-3.807 3.808-9.98 3.808-13.788 0-3.808-3.807-3.808-9.98 0-13.788 3.807-3.808 9.98-3.808 13.788 0A9.722 9.722 0 0 1 21.75 12c0 .975-.296 1.887-.809 2.571-.514.685-1.28 1.179-2.191 1.179-.904 0-1.666-.487-2.18-1.164a5.25 5.25 0 1 1-.82-6.26V8.25a.75.75 0 0 1 1.5 0V12c0 .682.208 1.27.509 1.671.3.401.659.579.991.579.332 0 .69-.178.991-.579.3-.4.509-.99.509-1.671a8.222 8.222 0 0 0-2.416-5.834ZM15.75 12a3.75 3.75 0 1 0-7.5 0 3.75 3.75 0 0 0 7.5 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
            href="mailto:foo@example.com"
          >
            foo@example.com
          </a>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 18.75a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5h-3Z"
            />
            <path
              clip-rule="evenodd"
              d="M8.625.75A3.375 3.375 0 0 0 5.25 4.125v15.75a3.375 3.375 0 0 0 3.375 3.375h6.75a3.375 3.375 0 0 0 3.375-3.375V4.125A3.375 3.375 0 0 0 15.375.75h-6.75ZM7.5 4.125C7.5 3.504 8.004 3 8.625 3H9.75v.375c0 .621.504 1.125 1.125 1.125h2.25c.621 0 1.125-.504 1.125-1.125V3h1.125c.621 0 1.125.504 1.125 1.125v15.75c0 .621-.504 1.125-1.125 1.125h-6.75A1.125 1.125 0 0 1 7.5 19.875V4.125Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
            href="tel:867-5309"
          >
            867-5309
          </a>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.848 2.771A49.144 49.144 0 0 1 12 2.25c2.43 0 4.817.178 7.152.52 1.978.292 3.348 2.024 3.348 3.97v6.02c0 1.946-1.37 3.678-3.348 3.97a48.901 48.901 0 0 1-3.476.383.39.39 0 0 0-.297.17l-2.755 4.133a.75.75 0 0 1-1.248 0l-2.755-4.133a.39.39 0 0 0-.297-.17 48.9 48.9 0 0 1-3.476-.384c-1.978-.29-3.348-2.024-3.348-3.97V6.741c0-1.946 1.37-3.68 3.348-3.97ZM6.75 8.25a.75.75 0 0 1 .75-.75h9a.75.75 0 0 1 0 1.5h-9a.75.75 0 0 1-.75-.75Zm.75 2.25a.75.75 0 0 0 0 1.5H12a.75.75 0 0 0 0-1.5H7.5Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          This, That
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19.902 4.098a3.75 3.75 0 0 0-5.304 0l-4.5 4.5a3.75 3.75 0 0 0 1.035 6.037.75.75 0 0 1-.646 1.353 5.25 5.25 0 0 1-1.449-8.45l4.5-4.5a5.25 5.25 0 1 1 7.424 7.424l-1.757 1.757a.75.75 0 1 1-1.06-1.06l1.757-1.757a3.75 3.75 0 0 0 0-5.304Zm-7.389 4.267a.75.75 0 0 1 1-.353 5.25 5.25 0 0 1 1.449 8.45l-4.5 4.5a5.25 5.25 0 1 1-7.424-7.424l1.757-1.757a.75.75 0 1 1 1.06 1.06l-1.757 1.757a3.75 3.75 0 1 0 5.304 5.304l4.5-4.5a3.75 3.75 0 0 0-1.035-6.037.75.75 0 0 1-.354-1Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <div>
            <a
              class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
              href="http://example.com"
            >
              Example
            </a>
            <div
              class="text-sm text-zinc-300 hidden print:block"
            >
              http://example.com
            </div>
          </div>
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline print:hidden"
            href="/resume.pdf"
          >
            PDF Resume
          </a>
          <br />
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection location displays location 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection location no location precludes rendering of willing 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      />
    </section>
  </div>
</body>
`;

exports[`InfoSection location unwilling 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
          <div
            class="text-sm text-zinc-300"
          >
            Not available to relocate
          </div>
          <div
            class="text-sm text-zinc-300"
          >
            Not willing to travel
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection location willing 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            aria-hidden="true"
            class="w-6 text-amber-400 print:text-sky-600"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
          <div
            class="text-sm text-zinc-300"
          >
            Willing to relocate
          </div>
          <div
            class="text-sm text-zinc-300"
          >
            Willing to travel
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
